Grace/tests/gibbs/errors/t125.grace
// ERROR = L0012
var num := 40x20
